# mini-gateway-rs

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.cargo/: _arm.config
.github/workflows/: rust.yml
build-apt/: README.md  control  install.sh  setup-repository.sh  uninstall.sh
build-docker/: config.example.yaml
build-docker/alpine/: Dockerfile  entrypoint.sh  router-api.initd  router-core.initd
build-docker/alpine/logrotate/: gwrs  setup.sh
build-docker/client/: Dockerfile  docker-compose.yaml
build-docker/debian/: Dockerfile  entrypoint.sh  router-api.service  router-core.service
build-docker/desktop/: README.md
common/: memory_log_constants.rs
router-api/: Cargo.toml  README.md
router-api/src/: config.rs  main.rs
router-api/src/api/: mod.rs
router-api/src/api/settings/: auto_config.rs  gateway_get.rs  gateway_list.rs  gateway_queries.rs  gateway_set.rs  gwnode_get.rs  gwnode_list.rs  gwnode_queries.rs  gwnode_set.rs  mod.rs  proxy_get.rs  proxy_list.rs  proxy_queries.rs  proxy_set.rs  proxydomain_get.rs  proxydomain_list.rs  proxydomain_queries.rs  proxydomain_set.rs
router-api/src/api/statistics/: log_bytesio.rs  log_default.rs  log_status_code.rs  logs.rs  logs_broadcast.rs  mod.rs  packet.rs  packet_broadcast.rs  visits.rs  visits_broadcast.rs
router-api/src/api/sync/: gateway_node.rs  gateway_node_queries.rs  gateway_node_tcp.rs  mod.rs  proxy_node.rs  proxy_node_queries.rs  proxy_node_tcp.rs
router-api/src/api/users/: mod.rs  models.rs
router-api/src/api/users/handlers/: create_user.rs  delete_user.rs  get_user.rs  get_users.rs  login.rs  mod.rs  update_user.rs
router-api/src/api/users/helper/: auth_middleware.rs  auth_token.rs  mod.rs
router-api/src/client/: client.rs  error.rs  examples.rs  mod.rs  payload.rs
router-api/src/module/: database.rs  database_log.rs  fs_watch.rs  fs_watch_advanced.rs  httpc.rs  mod.rs  temporary_log.rs  udp_log_db.rs  udp_log_fetcher.rs  udp_log_processor.rs  udp_logger.rs
router-api/src/module/fs_watch/: constants.rs  db_pool.rs  file_id.rs  log_watcher.rs  mod.rs  utils.rs
router-api/src/module/memory_log/: core.rs  mod.rs  spawner.rs
router-api/src/module/memory_log/logging/: gateway.rs  mod.rs  proxy.rs
router-api/src/module/udp_log/: common.rs  gateway.rs  proxy.rs
router-api/src/module/udp_net/: mod.rs  udp_log_db.rs  udp_log_fetcher.rs  udp_log_processor.rs  udp_logger.rs
router-api/src/module/udp_net/udp_log/: common.rs  gateway.rs  proxy.rs
router-cli/: Cargo.toml  README.md
router-cli/src/: main.rs
router-client/: README.md  package.json  svelte.config.js  vite.config.js
router-client/src-tauri/: Cargo.toml  tauri.conf.json
router-client/src-tauri/src/: main.rs
router-core/: Cargo.toml
router-core/src/: config.rs  detect.rs  main.rs  writer.rs
router-core/src/app/: gateway.rs  gateway_fast.old  gateway_fast.rs  mod.rs  proxy.rs  proxy_fast.rs  proxy_host.rs  proxy_sni.rs
router-core/src/service/: gateway.rs  mod.rs  proxy.rs  registry.rs
router-core/src/system/: listeners.rs  mod.rs  server.rs  signal.rs
router-core/src/system/default_page/: mod.rs  p404.rs  p500.rs  p_base.rs  tls_honeypot.rs
router-core/src/system/memory_log/: mod.rs  sender.rs
router-core/src/system/netlisten/: interfaces.rs  listener.rs  mod.rs  packet_handler.rs  permissions.rs  types.rs
router-core/src/system/protocol/: config.rs  connection.rs  mod.rs  parsing.rs  server.rs  types.rs
router-core/src/system/protocol/app/: registry.rs
router-core/src/system/protocol/services/: example_service.rs  handler.rs  mod.rs  service_protocol.rs
router-core/src/system/prottp/: core.rs  mod.rs
router-core/src/system/prottp/app/: gateway_node.rs  gateway_path.rs  mod.rs  proxy_node.rs  tls_tools.rs
router-core/src/system/terminator/: cli.rs  mod.rs  service.rs
router-core/src/system/udp_sender/: mod.rs
router-core/src/system/writer/: logger.rs  mapper.rs  mod.rs  rawid.rs
router-gui/: .gitignore  Cargo.toml  README.md  package.json
router-gui/interface/css/: component.css  layout.css
router-gui/interface/html/: login.html
router-gui/src/: config.rs  main.rs
router-gui/src/assets/: css.rs  mod.rs  script.rs
router-gui/src/pages/: home.rs  mod.rs  users.rs
router-gui/src/pages/settings/: gateway.rs  gwnode.rs  mod.rs  proxy.rs
router-gui/web-gui/: README.md  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
router-gui/web-gui/src/: app.css  app.html
router-gui/web-gui/src/lib/: config.ts
router-gui/web-gui/src/lib/actions/: gatewayActions.ts  gwnodeActions.ts  proxyActions.ts  statisticsAction.ts  userActions.ts
router-gui/web-gui/src/lib/components/: ConnectionsList.svelte  Dashboard.svelte  Footer.svelte  Header.svelte  HighLowChart.svelte  Layout.svelte  LineChart.svelte  Login.svelte  LoginForm.svelte  MobileMenu.svelte  NavBar.svelte  ThemeToggle.svelte
router-gui/web-gui/src/lib/components/common/: BackButton.svelte  Button.svelte  DeleteConfirmationModal.svelte  EmptyState.svelte  InputField.svelte  LoadingSpinner.svelte  PageHeader.svelte  Pagination.svelte  SearchInput.svelte  (+2 more)
router-gui/web-gui/src/lib/services/: gatewayService.ts  gwnodeService.ts  proxyService.ts  statisticsService.ts  userService.ts
router-gui/web-gui/src/lib/stores/: connectionsStore.ts  gatewayStore.ts  gwnodeStore.ts  proxyStore.ts  proxyStoreUtils.ts  statisticsStore.ts  theme.ts  userStore.ts  usersStore.ts
router-gui/web-gui/src/lib/types/: gateway.ts  gwnode.ts  proxy.ts  statistics.ts  userTypes.ts
router-gui/web-gui/src/lib/utils/: theme.ts
router-gui/web-gui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
router-gui/web-gui/src/routes/gwnode/: +page.svelte
router-gui/web-gui/src/routes/node/: +page.bkp  +page.svelte
router-gui/web-gui/src/routes/proxy/: +page.svelte
router-gui/web-gui/src/routes/stats/: +page.svelte
router-gui/web-gui/src/routes/users/: +page.svelte
router-rds/: Cargo.toml
test-app/: express.js  package-lock.json  package.json  websocket.js
test-docker/: docker-compose.yaml
(+28 files in other folders)
