[workspace]
resolver = "2"
members = [
    "router-api",
    "router-cli",
    "router-core",
    "router-gui"
]

[workspace.dependencies]
async-trait = "0.1.88"
env_logger  = "0.11.7"
tracing     = "0.1.41"
log         = "0.4"
serde_json  = "1.0.140"
crossterm   = { version = "0.28.1"  , features = [ "event-stream"   ] }
redis       = { version = "0.29.2"  , features = [ "tokio-comp"     ] }
tokio       = { version = "1.44.1"  , features = [ "full"           ] }
serde       = { version = "1.0.219" , features = [ "derive"         ] }
mini-config = { git = "https://github.com/zonblade/mini-config-rs.git" , rev="e62f8e85107e44b1eaa1e27f6cb46d12143a37f7" , features = [ "derive" ] }