[package]
name = "router-api"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror       = "1.0"
async-trait     = "0.1"
actix-web       = { workspace = true }
actix-cors      = { workspace = true }
env_logger      = { workspace = true }
log             = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
mini-config     = { workspace = true , features = [ "derive" ]}
rusqlite        = { version = "0.32.0", features = ["bundled"] }
uuid            = { version = "1.6.1", features = ["v4", "serde"] }
rand            = "0.8.5" 
jsonwebtoken    = "9.3.1"
futures         = "0.3.31"
futures-util    = "0.3.31"
clap            = { version = "4.5.35", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
dirs        = "6.0.0"
