[package]
name = "router-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-config     = { workspace = true }
crossterm       = { workspace = true }
clap            = { version = "4.5.35", features = ["derive"] }
reqwest         = { version = "0.12.4", features = ["json", "blocking"] }
serde           = { version = "1.0.196", features = ["derive"] }
tokio           = { version = "1.35.1", features = ["full"] }
serde_json      = "1.0.113"
serde_yaml      = "0.9.29"
anyhow          = "1.0.79"
thiserror       = "1.0.56"
log             = "0.4.20"
env_logger      = "0.11.1"
dirs            = "5.0.1"
openssl         = "0.10.72"