[package]
name    = "router-core"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
env_logger  = { workspace = true }
tokio       = { workspace = true }
log         = { workspace = true }
mini-config = { workspace = true }
crossterm   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
pingora     = { git = "https://github.com/zonblade/pingora.git", rev = "92274500c6c722eee962f30b0b779c62a515dbea", features = ["proxy", "lb", "cache", "openssl"] }
ctrlc       = "3.4.5"
regex       = "1.11.1"
http        = "1.3.1"
bytes       = "1.10.1"
sha2        = "0.10.8"
pnet        = "0.34.0"
pnet_datalink = "0.34.0"
libc        = "0.2.153"
chrono      = "0.4.31"  # Added for timestamp formatting in custom logger

[target.'cfg(target_os = "macos")'.dependencies]
dirs        = "6.0.0"
