[package]
name = "router-core"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
env_logger  = { workspace = true }
tokio       = { workspace = true }
log         = { workspace = true }
mini-config = { workspace = true }
crossterm   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
pingora     = { git = "https://github.com/zonblade/pingora.git", rev = "a1135f134a41f90ffa564da7091a6e6babe8803d", features = ["proxy", "lb", "cache", "openssl"] }
ctrlc       = "3.4.5"
regex       = "1.11.1"
http        = "1.3.1"
bytes       = "1.10.1"
sha2        = "0.10.8"
libc            = "0.2.153"
chrono          = "0.4.31"  # Added for timestamp formatting in custom logger
lazy_static     = "1.5.0"
regex-automata  = "0.4.9"
lru             = "0.14.0"
num_cpus        = "1.16.0"
openssl = { version = "*", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
dirs        = "6.0.0"

# Performance optimization profiles
[profile.release]
opt-level = 3            # Maximum optimization
lto = "fat"              # Link-Time Optimization for whole program optimization
codegen-units = 1        # Maximize optimization opportunities (slower build)
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols from binary
debug = false            # No debug symbols

# Enable the faster system allocator
[profile.release.build-override]
opt-level = 3
codegen-units = 1
